--- a/Assignment_2.Rmd
+++ b/Assignment_2.Rmd
@@ -45,7 +45,7 @@ View(gaz)
 cleangaz <- gaz %>%
 filter(STATE_ALPHA %in% c("CA")) 
 View(cleangaz)
-GAZCA <- write_delim(cleangaz, "C:/Users/wagnerquiros/DESKTOP/UCSB/Courses/Spring 2017/Informatics/newprojects/Assignments_ESM262", delim= "|")
+write_delim(cleangaz, "C: /Users/wagnerquiros/DESKTOP/UCSB/Courses/Spring 2017/Informatics/newprojects/Assignments_ESM262", delim= "|")
 ```
 
 
@@ -72,6 +72,8 @@ Common_feature_class[which.min(Common_feature_class$n), 1]
 **3.What is the approximate center point of each county CPC ?**
 
 ```{r 7}
+
+
 
 ```
 
