--- a/Assignment_2_FINAL.Rmd
+++ b/Assignment_2_FINAL.Rmd
@@ -2,7 +2,7 @@
 title: "Assignment_2.Informatics."
 author: "Wagner Quiros Pereira"
 date: "5/9/2017"
-output: html_document
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
@@ -15,11 +15,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **1. Reading the gazetteer data as-is (all columns; no type conversion) into a gaz_raw tibble and keeping only specific columns**
 
-```{r 1}
+```{r 1, fig.align='center'}
 suppressPackageStartupMessages({
   library(tidyverse)
   library(dplyr)
   library(magrittr)
+  library(knitr)
 })
 
 gaz_raw<- read_delim("CA_Features_20170401.zip", delim = "|")
@@ -33,17 +34,16 @@ as_tibble(gaz_raw)
 
 **2. Converting the gaz columns to the appropriate type, and any placeholders for unknown data to NA**
 
-```{r 2}
+```{r 2, fig.align='center'}
 gaz$PRIM_LAT_DEC <- ifelse(gaz$PRIM_LAT_DEC == 0, NA, gaz$PRIM_LAT_DEC)
 gaz$PRIM_LONG_DEC <- ifelse(gaz$PRIM_LONG_DEC == 0, NA, gaz$PRIM_LONG_DEC)
 gaz$MAP_NAME <- ifelse(gaz$MAP_NAME =='Unknown', NA, gaz$MAP_NAME)
-as_tibble(gaz)
 View(gaz)
 ```
 
 **3. Selecting main observations**
 
-```{r 3}
+```{r 3, fig.align='center'}
 gaz <- gaz %>%
   filter(!(PRIM_LAT_DEC == 'NA' | PRIM_LONG_DEC == 'NA')) %>% 
   filter(STATE_ALPHA == 'CA')
@@ -52,62 +52,17 @@ View(gaz)
 
 **4. Saving clean up doc with delim |**
 
-```{r 4}
-write_delim(gaz, "/USERS/wagnerquiros/Desktop/UCSB/Courses/Spring 2017/Informatics/newprojects/Assignments_ESM262/gazzca.csv", delim = "|")
-```
-
-write_delim(gaz, "C:/Users/Ignacia Rivera/Dropbox/MESM/Quarter VI/ComputingForEnvScience/Rivera_ESM262/HW2/gaz.csv", delim= "|")
-
-
-
-
-
-
+```{r 4, fig.align='center'}
+write_delim(gaz, "/Users/wagnerquiros/Desktop/UCSB/Courses/Spring 2017/Informatics/newprojects/gaz.csv", delim = "|")
+View(gaz)
 ```
 
 
-
-```{r 1}
-suppressPackageStartupMessages({
-  library(tidyverse)
-  library(dplyr)
-  library(magrittr)
-})
-gaz_raw_<- read_delim("CA_Features_20170401.zip", delim = "|")
-  as_tibble(gaz_raw_)
-  colnames(gaz_raw_) [1] <- "ID"
-gaz <- select(gaz_raw_, ID, FEATURE_NAME, FEATURE_CLASS, STATE_ALPHA, COUNTY_NAME, PRIM_LAT_DEC, PRIM_LONG_DEC, SOURCE_LAT_DEC,  SOURCE_LONG_DEC, ELEV_IN_M, MAP_NAME, DATE_CREATED, DATE_EDITED)
-as_tibble(gaz)
-GAZ <- write_delim(gaz, "/Users/wagnerquiros/Desktop/UCSB/Courses/Spring 2017/Informatics/newprojects/Assignments_ESM262/GAZ.csv", delim= "|")
-```
-
-
-
-```{r 2}
-CAGAZ <- write_delim(GAZ, "/Users/wagnerquiros/Desktop/UCSB/Courses/Spring 2017/Informatics/newprojects/Assignments_ESM262/CAGAZ.csv", delim= "|")
-CAGAZ$PRIM_LAT_DEC<- parse_character(CAGAZ$PRIM_LAT_DEC, na="0")
-CAGAZ$PRIM_LONG_DEC<- parse_character(CAGAZ$PRIM_LONG_DEC, na="0")
-CAGAZ <- filter!(PRIM_LAT_DEC == 'NA' | PRIM_LONG_DEC == 'NA') 
-View(CAGAZ)
-```
-
-**4. Delete from gaz rows where:**
-
-*The primary latitude or longitude are unknown
-*The feature is not in California
-
-```{r 4}
-CAGAZ <- GAZ %>%
-filter(STATE_ALPHA %in% c("CA")) 
-View(CAGAZ)
-```
-
-
-##Part1. Analyze.
+##Part2. Analyze.
 **1.What is the most-frequently-occuring feature name ?**
 
-```{r 5}
-Common_feature_name <- count(CAGAZ, FEATURE_NAME)
+```{r 5, fig.align='center'}
+Common_feature_name <- count(gaz, FEATURE_NAME)
 Common_feature_name[which.max(Common_feature_name$n), 1]
 ```
 
@@ -116,8 +71,8 @@ Common_feature_name[which.max(Common_feature_name$n), 1]
 **2.What is the most-frequently-occuring feature class ?**
 
 
-```{r 6}
-Common_feature_class <- count(CAGAZ, FEATURE_CLASS)
+```{r 6, fig.align='center'}
+Common_feature_class <- count(gaz, FEATURE_CLASS)
 Common_feature_class[which.min(Common_feature_class$n), 1]
 ```
 
@@ -125,27 +80,48 @@ Common_feature_class[which.min(Common_feature_class$n), 1]
 
 **3.What is the approximate center point of each county CPC ?**
 
-```{r 7}
-point_center <- CAGAZ
-  group_by(COUNTY_NAME) %>%
-  summarise(latMin = min(PRIM_LONG_DEC, na.rm= TRUE),
-            latMax = max(PRIM_LAT_DEC, na.rm= TRUE),
-            longMin = min(PRIM_LONG_DEC, na.rm= TRUE),
-            longMax = max(PRIM_LONG_DEC, na.rm= TRUE)) %>% 
-  mutate(lat_center = (latMin + latMax) /2)%>% 
-  mutate(long_center = (longMin + longMax)/2) %>% 
+```{r 7, fig.align='center'}
+c_county_point <- gaz %>%
+ group_by(COUNTY_NAME) %>%
+  summarise(latmin = min(PRIM_LAT_DEC, na.rm= TRUE),
+            latmax = max(PRIM_LAT_DEC, na.rm= TRUE),
+            longmin = min(PRIM_LONG_DEC, na.rm= TRUE),
+            longmax = max(PRIM_LONG_DEC, na.rm= TRUE)) %>% 
+  mutate(lat_center = (latmin + latmax) /2)%>% 
+  mutate(long_center = (longmin + longmax)/2) %>% 
   select(County = COUNTY_NAME, Latitud = lat_center, 
          Longitude= long_center)
-View(point_center)
+View(c_county_point)
+Table1 <- table(c_county_point)
+View(Table1)
 ```
 
-**3.What are the fractions of the total number of features in each county that are natural? man-made?**
 
-```{r 8}
-maker <- CAGAZ_complete %>% 
-  group_by(COUNTY_NAME, made_by) %>% 
-  summarise(count = n()) %>% 
-  spread(made_by, count) %>% 
-  mutate(propman = man/(man + nature),
-         propnature = 1-propman) 
+**4.What are the fractions of the total number of features in each county that are natural? man-made?**
+
+```{r 8, fig.align='center'}
+natural <- c("Valley", "Spring" ,"Stream", "Gut", "Canal", "Cape", "Lake", "Summit", "Plain", "Woods", "Gap",   "Ridge","Bay",  "Beach",   "Channel", "Slope", "Island",  "Basin", "Cliff", "Swamp","Area" , "Bend",  "Range", "Falls",  "Forest", "Lava", "Rapids", "Crater", "Glacier", "Oilfield","Sea", "Arroyo", "Isthmus")
+
+Feature_category <- tibble(FEATURE_CLASS= unique(gaz$FEATURE_CLASS)) %>% 
+  mutate(category = ifelse(FEATURE_CLASS %in% natural == "TRUE", 1, 0)) 
+
+#0=manmade, 1= natural
+  
+gaz_complete <- inner_join(gaz, Feature_category, by = "FEATURE_CLASS")
+
+Features_type <- gaz_complete%>% 
+  group_by(COUNTY_NAME) %>% 
+  summarise(total = n(), natural = sum(category)) %>% 
+  mutate(fraction_natural = natural/total) %>% 
+  mutate(fraction_manmade = 1 - fraction_natural) %>% 
+  select(County= COUNTY_NAME, Natural= fraction_natural, Man_Made= fraction_manmade)
+```
+
+
+```{r 9, fig.align='center'}
+kable(c_county_point)
+```
+
+```{r 10, fig.align='center'}
+kable(Features_type)
 ```
