--- a/Assignment_3_Wagner_Quiros.Rmd
+++ b/Assignment_3_Wagner_Quiros.Rmd
@@ -19,6 +19,7 @@ library(lubridate)
 
 
 "Part 1. Clim Figure with Temperature and Rain"
+
 ```{r 1, fig.align='center'}
 #Monthly average temperature from tmax and tmin
 clim$avg.temp <- (clim$tmin + clim$tmax)/2
@@ -44,145 +45,12 @@ Figure_2
 grid.arrange(Figure_1, Figure_2)
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
-```{r basic example}
-# basic plot
-ggplot(clim, aes(y=tmax, x=month))+geom_point()
-
-# would look bettter as a boxplot. as.factor we are saying you can group things and fixes problems in ggplot. Interpretes data as a category instead of a number. To group something by category is easier using factors.
-ggplot(clim, aes(y=tmax, x=as.factor(month)))+geom_boxplot()
-
-# save the basic plot so we can add to it
-p=ggplot(clim, aes(y=tmax, x=as.factor(month)))+geom_boxplot()
-
-p+labs(y="Maximum Temperature", x="Month") #Just adding, nit yet saving changes.
-p = p + labs(y="Maximum Temperature", x="Month")
-p
-
-#Exploring lines with points and. Line 241.
-Figure_1 = ggplot(clim, aes(y=tmax,x=year))+stat_summary(fun.y="mean", geom="point")+stat_smooth()
-p1
-
-```
-
-
-
-Thre are many ways to do this (see labs and titles) but **themes** give you alot of control on your plot elements. Was to change the way the plot looks. Themes allow to change characteristics of those: Italic, bold, size, etc.!
-
-* plot.title
-* axis.title
-* axis.title.x
-* axis.title.y
-* axis.text
-* axis.text.y
-
-I'll also show you the use of **expression** to write math symbols as labs
-
-More on all the options that can be found with [**themes**](http://ggplot2.tidyverse.org/reference/theme.html)
-
-```{r theme examples}
-# themes are used to control character of the plot
-pclr =ggplot(clim, aes(y=tmax, x=as.factor(month)))+geom_boxplot()
-pclr = pclr + labs(y="Maximum Temperature", x="Month")
-pclr = pclr+theme(axis.text= element_text(face="bold", colour="red", size=14))
-pclr = pclr +  geom_hline(yintercept=0, col="yellow", size=4)
-pclr
-
-#lets say we want to color in the boxes - this is inside the boxplto so can't add. Col outer part and fill inside.
-p = ggplot(clim, aes(y=tmax, x=as.factor(month)))+geom_boxplot(col="rosybrown3", fill="red")
-p
-# useful to see color options. Expression allows to add the celcious sign.
-colors()
-
-p = p + labs(y= expression(paste("Maximum Temperature ",C**degree)), x="Month") 
-p= p+theme(axis.text= element_text(face="bold", colour="yellow3", size=14), 
-           axis.title=element_text(face="italic", size=14))
-p 
-p = p+  ggtitle("Monthly Temperature in Sierras")
-p
-
-
-# notice how themes keep inheriting - so you can call theme multiple times
-p + coord_flip() 
-p=p + coord_flip() + theme(plot.margin=unit(c(1,3,1,3),"cm")) # top right bottom left
-p
-p = p + theme(plot.title=element_text(size=16, hjust=0.5), plot.background=element_rect(fill="peachpuff1")) 
-p
-
-# to display more than one plot (a "matrix" or grid of plots)
-
-grid.arrange(p,pclr)
-# or to control to make by col/ BOTH PLOTS TOGETHER 
-grid.arrange(p, pclr, ncol=2) #changes into 2 columns.
-
-# there are also built in themes
-pclr = pclr+theme_bw()
-
-pclr
-```
-There are many different geoms (geometries) - lets try the standard ones
-
-```{r plot types}
-
-
-# scatter plot
-p2=ggplot(clim, aes(x=tmax, y=tmin))+geom_point(col="blue", shape=9, size=rel(4)) #ANother option is on shape you can use "*", adding symbol in quotes. (4), Making the value 4 times as big.
-p2
-  p2 = p2+labs(x="Max Temp C", y="Min Temp C") 
-  p2 = p2+ ggtitle("How does daily maximim and min temp compare")
-  p2 = p2 + geom_abline(intercept=0,slope=1, colour="green", size=4)
-p2
-
-#density plot
-p3=ggplot(clim, aes(x=rain))+geom_density()
-p3
-p3 = ggplot(subset(clim, clim$rain > 0), aes(x=rain))+geom_density(fill="blue")
-#p4=ggplot(clim, aes(x=date,y=rain))+geom_line()+ggtitle("Line Graph"). I also subsetted the days where there was rain over 0.
-p3
-#fix issue with date
-clim$date = mdy(paste(clim$month, clim$day, clim$year, sep="/"))
-p4=ggplot(clim, aes(x=date,y=rain))+geom_line()+ggtitle("Line Graph")
-p4
-grid.arrange(p,p2,p3,p4) # Here we arrange plots in a column with ncol.
-```
-
-
-
-INCREBIBLE USEFULL. One of the most useful things about GGPLOT is that it makes it easy to visualize your data in ways that highlight different attributes - this can help you to see multiple dimensions at once
-There are multiple ways to do this
-
-* color/size/shape (within plots)
-* facets  (between plots)
-
-Lets start with color
-We can use a more interesting data set *thindeep*
-
-This dataset is results of a simulation experiment that looks at the impacts of different levels of forest
-thinning on water and carbon fluxes for a site in the California Sierra
-
-*  The site/plot is simulated for 10 years following the thinning experiment. 
-*  The thinning experiment is repeated for different start dates within a 50 year historic climate record,
-*  And for different thinning intensities 
-*  And for different types of thinning that try to maximize or minimize sharing of water between trees
+"Part 2. Thindeep Figure "
 
 
 **BIOMASS OVER TIME BEHAVIOR**
 ```{r color}
 View(thindeep)
-range(thindeep$thin) #different thining.
-range(thindeep$scen) #from the number of years of data.
-# ok lets look at how biomass recovers. BIOMASS OVER TIME.
 p1=ggplot(thindeep, aes(x=as.factor(wy), y=plantc))+geom_boxplot()
 p1 = p1+labs(x="Years since thinning", y="Biomass")
 p1 = p1 +theme(axis.text= element_text(face="bold", size=14), 
@@ -204,6 +72,9 @@ p1 = p1 +theme(axis.text= element_text(face="bold", size=14),
 p1
 
 ```
+
+
+
 
 This is a good opporutnity to play witht e legend a little, we can use *theme* again to control formatting
 and *scale_color_discrete* to control content
